--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,30 +1,28 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+  <div class="container">
+    <a class="navbar-brand" href="#">Navbar</a>
 
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li *ngIf="loggedIn()" class="nav-item active">
         <a class="nav-link" href="#">Matches</a>
       </li>
-      <li class="nav-item">
+      <li *ngIf="loggedIn()" class="nav-item">
         <a class="nav-link" href="#">Lists</a>
       </li>
-      <li class="nav-item">
+      <li *ngIf="loggedIn()" class="nav-item">
         <a class="nav-link" href="#">Message</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" (click)='logout()'>Logout</a>
       </li>
     </ul>
     
-    <div *ngIf="loggedIn()" class="dropdown">
-      <a class="dropdown-toggle text-light">
-        Welcome user
+    <div *ngIf="loggedIn()" class="dropdown" dropdown>
+      <a class="dropdown-toggle text-light" dropdownToggle>
+        Welcome <b>{{authService.decodedToken?.unique_name | titlecase}}</b>
       </a>
     
-      <div class="dropdown-menu">
+      <div class="dropdown-menu mt-3" *dropdownMenu>
         <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Profile</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Logout</a>
+        <a class="dropdown-item" (click)='logout()'><i class="fa fa-sign-out"></i>Logout</a>
       </div>
     </div>
 
@@ -46,6 +44,8 @@
 
       <button [disabled] = "!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
     </form>
+  </div>
+  
 </nav>
 
 <!-- <pre>
