--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" [routerLink]="['/home']">App Dating</a>
 
-    <ul class="navbar-nav mr-auto">
-      <li *ngIf="loggedIn()" class="nav-item active">
-        <a class="nav-link" href="#">Matches</a>
+    <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
+      <li class="nav-item" routerLinkActive="active" >
+        <a class="nav-link" [routerLink]="['/members']" >Matches</a>
       </li>
-      <li *ngIf="loggedIn()" class="nav-item">
-        <a class="nav-link" href="#">Lists</a>
+      <li class="nav-item" routerLinkActive="active" >
+        <a class="nav-link" [routerLink]="['/lists']" >Lists</a>
       </li>
-      <li *ngIf="loggedIn()" class="nav-item">
-        <a class="nav-link" href="#">Message</a>
+      <li class="nav-item" routerLinkActive="active" >
+        <a class="nav-link" [routerLink]="['/messages']">Message</a>
       </li>
     </ul>
     
@@ -42,7 +42,7 @@
               required 
               [(ngModel)]="model.password">
 
-      <button [disabled] = "!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+      <button [disabled] = "!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
     </form>
   </div>
   
