--- a/DatingApp-SPA/src/app/member/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/member/member-edit/member-edit.component.html
@@ -14,7 +14,7 @@
       <div class="card">
         <img
           class="card-img-top img-thumbnail"
-          src="{{ user.photoUrl }}"
+          src="{{ photoUrl }}"
           alt="{{ user.knownAs }}"
         />
         <div class="card-body">
@@ -80,7 +80,7 @@
             </form>
           </tab>
           <tab heading="Edit Photos">
-            <p>Photo edit will go there</p>
+            <app-photo-editor [photos]="user.photos" (getMemberPhotoChange)="updateMainPhoto($event)"></app-photo-editor>
           </tab>
         </tabset>
       </div>
