--- a/DatingApp-SPA/src/app/member/member-list/member-list.component.html
+++ b/DatingApp-SPA/src/app/member/member-list/member-list.component.html
@@ -1,7 +1,57 @@
 <div class="container mt-5">
+
+  <form class="form-inline" #form="ngForm" (ngSubmit)="loadUser()" novalidate>
+    <div class="form-group">
+      <label for="minAge">Age From</label>
+      <input  type="number" class="form-control ml-1" style="width: 70px" 
+              [(ngModel)]="userParams.minAge" id="minAge" name="minAge">
+    </div>
+  
+    <div class="form-group px-2">
+      <label for="maxAge">Age To</label>
+      <input  type="number" class="form-control ml-1" style="width: 70px" 
+              [(ngModel)]="userParams.maxAge" id="maxAge" name="maxAge">
+    </div>
+  
+    <div class="form-group px-2">
+      <label for="gender">Show: </label>
+      <select class="form-control ml-1" style="width: 130px" id="gender"
+              [(ngModel)]="userParams.gender" name="gender">
+        <option *ngFor="let gender of genderList" [value]="gender.value">
+          {{gender.display}}
+        </option>
+      </select>
+    </div>
+    <button type="submit" class="btn btn-primary" style="margin-left:10px">Apply Filters</button>
+    <button type="button" class="btn btn-info" (click)="resetFilters()" style="margin-left:10px">Reset Filter</button>
+  
+    <div class="col">
+      <div class="btn-group float-right">
+        <button type="button" name="orderBy"
+                [(ngModel)]="userParams.orderBy" 
+                btnRadio='lastActive'
+                (click)="loadUsers()" class="btn btn-primary">Last Active</button>
+        <button type="button" name="orderBy"
+                [(ngModel)]="userParams.orderBy"
+                btnRadio="created" 
+                (click)="loadUsers()" class="btn btn-primary">Newest Members</button>
+      </div>
+    </div>
+  </form>
+  <br>
+
   <div class="row">
     <div *ngFor="let user of users" class="col-lg-2 col-md-3 col-sm-6">
       <app-member-card [user]="user"></app-member-card>
     </div>
   </div>
+</div>
+
+<div class="d-flex justify-content-center">
+  <pagination [boundaryLinks]="true" 
+              
+            previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+ 
+</pagination> 
+ 
 </div>
