end of section 15

--- a/DatingApp-SPA/src/app/member/member-list/member-list.component.html
+++ b/DatingApp-SPA/src/app/member/member-list/member-list.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
 
-  <form class="form-inline" #form="ngForm" (ngSubmit)="loadUser()" novalidate>
+  <form class="form-inline" #form="ngForm" (ngSubmit)="loadUsers()" novalidate>
     <div class="form-group">
       <label for="minAge">Age From</label>
       <input  type="number" class="form-control ml-1" style="width: 70px" 
